# ofw

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
docs/: index.html  kumi.html  raberu.html  style.css
include/: kumi.hpp  raberu.hpp  tools.hpp
test/: CMakeLists.txt
test/kumi/: CMakeLists.txt  access.cpp  adapt.cpp  aggregate_ctor.cpp  apply.cpp  as_tuple.cpp  cat.cpp  construction.cpp  convert.cpp  extract.cpp  flatten.cpp  fold.cpp  for_each.cpp  forward_as_tuple.cpp  make_tuple.cpp  map.cpp  reorder.cpp  split.cpp  tie.cpp  transpose.cpp  zip.cpp
test/raberu/: CMakeLists.txt  access.cpp  common.hpp  concepts.cpp  constraints.cpp  contains.cpp  get_type.cpp  interface.cpp  merge.cpp  size.cpp
